# nova-selachiia

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: dmm_validation_checklist.md  nssm_enhancements.md  project_inventory.md  project_roadmap.md
models/nssm/: best_model.pt  checkpoint_epoch_001.pt  checkpoint_epoch_011.pt  nssm_config.json  nssm_risk_deciles.csv  nssm_validation_metrics.json  test_predictions.parquet  training_history.json
notebooks/: 01_project_inventory.ipynb  02_data_analysis.ipynb  03_feature_engineering.ipynb  04_nssm_training.ipynb
scripts/: profile_bottlenecks.py
src/nova_selachiia/: config.py  counterfactual.py  metrics.py
src/nova_selachiia/models/: __init__.py  nssm.py
src/nova_selachiia/training/: __init__.py  callbacks.py  trainer.py
src/nova_selachiia/utils/: __init__.py  visualization.py
