
[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nova-selachiia"
version = "0.1.0"
description = "Hybrid (deterministic + stochastic) counterfactual dynamics for Selachiia along the Brazilian coast"
readme = "README.md"
requires-python = ">=3.11 ,<4.0"
authors = [{ name = "Nova Research" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "xarray>=2024.6",
    "requests>=2.31",
    "tqdm>=4.66",
    "scipy>=1.11",
    "httpx (>=0.28.1,<0.29.0)",
    "gfw-api-python-client (>=1.4.0,<2.0.0)",
]

[project.optional-dependencies]
data = ["netcdf4>=1.6", "h5netcdf>=1.3", "pyobis>=1.0.3"]
plot = ["matplotlib>=3.8", "seaborn>=0.13"]
ml = ["torch>=2.2"]

[tool.poetry]
packages = [{ include = "nova_selachiia", from = "src" }]

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29"
ruff = ">=0.6"

[tool.ruff]
line-length = 100
target-version = "py310"
